ecommerce-k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend-app
  namespace: ecommerce
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 
      maxUnavailable: 1 
  selector:
    matchLabels:
      app: ecommerce-frontend-app
  template:
    metadata:
      labels:
        app: ecommerce-frontend-app
    spec:
      containers:
      - image: quay.io/rh_ee_mrudraia/atlan-ecommerce-frontend:v18 #v11
        name: ecommerce-frontend
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        imagePullPolicy: Always
