ecommerce-k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-service
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-frontend-app
  ports:
  - port: 3000
    targetPort: 3000
  type: LoadBalancer
