ecommerce-k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
spec:
  rules:
    - host: ecommerce-frontend-app.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ecommerce-backend-service
              port:
                number: 5000
